hover effect removed and btn alignment fixed

--- a/assets/css/testing.css
+++ b/assets/css/testing.css
@@ -1490,38 +1490,24 @@ html.no-scroll {
 .opacity-0 {
     opacity: 0;
 }
+
 /* 
 .Desktop_comparison_section {
     height: 655px !important;
     width: 375px !important;
 } */
 
-.customer_hero_section,
 .height-945px {
     height: 945px;
 }
 
-.red_border .col-xl-6:after {
-    position: absolute;
-    /* z-index: -1; */
-    /* top: 10%; */
-    /* right: -5px; */
-    width: 100%;
-    height: 100%;
-    content: '';
-   background: #C43438 !important;
-}
-.red_border .col-xl-6:before {
-    position: absolute;
-    /* z-index: -1; */
-    /* top: 10%; */
-    /* right: -5px; */
-    width: 100%;
-    height: 50px;
-    background: linear-gradient(top, rgba(255,255,255,1) 0%, rgba(255,255,255,0) 100%);
-    content: '';
-    background: -moz-linear-gradient(top, rgba(255,255,255,1) 0%, rgba(255,255,255,0) 100%);
-    background: -webkit-linear-gradient(top, rgba(255,255,255,1) 0%,rgba(255,255,255,0) 100%);
-    background: linear-gradient(to bottom, rgba(255,255,255,1) 0%,rgba(255,255,255,0) 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#00ffffff',GradientType=0 );
+
+@media (max-width:1366px) {
+    .height-945px {
+        height: 625px !important;
+    }
+
+    .test_div {
+        height: 1250px;
+    }
 }
